--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,3 +3,15 @@
 @tailwind components;
 /* purgecss end ignore */
 @tailwind utilities;
+@responsive {
+  @variants dark {
+    .my-gradient {
+      background: linear-gradient(180deg, rgb(0, 0, 0), rgba(0, 0, 0, 0.71));
+      z-index: -1;
+    }
+  }
+  .my-gradient {
+    background: linear-gradient(to right, #18adfd7d, #1fec93d1);
+    z-index: -1;
+  }
+}
