redesign menu in mobile view to bottom navbar

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -22,6 +22,10 @@
   }
 }
 
+.active-menu-bottom{
+  background: #ffffff59;
+}
+
 .scale-up-center {
   -webkit-animation: scale-up-center 2s cubic-bezier(0.390, 0.575, 0.565, 1.000) infinite both;
   animation: scale-up-center 2s cubic-bezier(0.390, 0.575, 0.565, 1.000) infinite both;
