--- a/src/css/style.css
+++ b/src/css/style.css
@@ -35,11 +35,11 @@
   }
 
   .blog-post-content a {
-    @apply text-teal-500;
+    @apply text-teal-500 border-b-2 border-teal-500 border-dotted;
   }
 
   .blog-post-content h2 {
-    @apply pb-6 font-bold text-2xl;
+    @apply mb-6 border-b-2 border-teal-600 inline-block font-bold text-2xl;
   }
 
   .blog-post-content blockquote {
