--- a/src/css/style.css
+++ b/src/css/style.css
@@ -15,8 +15,12 @@
       @apply text-base p-6 rounded mb-6 border-l-8 font-hairline border-teal-600 bg-teal-200;
     }
 
-    .blog-post-content ul {
+    .blog-post-content blockquote ul {
       @apply text-base list-disc pl-6 pt-6;
+    }
+
+    .blog-post-content ul {
+      @apply list-disc pl-6 pb-6 pt-6;
     }
 
     .blog-post-content code {
@@ -42,7 +46,7 @@
     @apply mb-6 border-b-2 border-teal-600 inline-block font-bold text-2xl;
   }
 
-  .blog-post-content blockquote {
+  .blog-post-content blockquote ul{
     @apply pb-6;
   }
 }
